# unicens-linux-daemon

./: .gitignore  .gitmodules  .project  ANDROID.md  CMakeLists.txt  LICENSE  README.md  ReleaseNotes.txt  build.sh  crossAndroid.sh  crossQNX.sh  crossQNX6.sh  crossQNX7.sh  start.sh  startClient.sh  startDaemon.sh  unlink-all-channels.sh
cfg/: README.md  config_all_devices.xml  config_audio_kit.xml  config_multichannel_audio_kit.xml  config_video_on_demand.xml  config_vod.xml  driver_config_example.xml  unicens.xsd
cmake-toolchain/: android.cmake  qnx6.cmake  qnx7.cmake
libraries/: CMakeLists.txt
libraries/cdev-handler/: CMakeLists.txt  CdevHandler.c  CdevHandler.h
libraries/console/: CMakeLists.txt  Console.h
libraries/mld-configurator/: CMakeLists.txt  mld-configurator-v1.c  mld-configurator-v1.h  mld-configurator-v2.c  mld-configurator-v2.h
libraries/mxml/: CMakeLists.txt  config.h  mxml-file.c  mxml-node.c  mxml-private.c  mxml-search.c  mxml-string.c
libraries/ucs-xml/: CMakeLists.txt  UcsXml.c  UcsXml.h  UcsXmlDriverConfig.h  UcsXml_Private.c  UcsXml_Private.h
libraries/ucsi/: CMakeLists.txt  ucsi_api.h  ucsi_cfg.h  ucsi_impl.c  ucsi_print.c  ucsi_print.h
libraries/unicens/: CMakeLists.txt  README.md  version.txt
libraries/unicens/cfg/: ucs_types_cfg.h  ucs_xrm_cfg.h
libraries/unicens/cfg-daemon/: ucs_cfg.h  ucs_types_cfg.h  ucs_xrm_cfg.h
libraries/unicens/inc/: ucs_alm.h  ucs_amd.h  ucs_ams.h  ucs_ams_pb.h  ucs_amsallocator.h  ucs_amsmessage.h  ucs_amspool.h  ucs_amtp.h  ucs_api.h  ucs_attach.h  ucs_base.h  ucs_bc_diag.h  ucs_class.h  ucs_class_pb.h  ucs_cmd.h  ucs_cmd_pb.h  ucs_dec.h  ucs_dl.h  ucs_eh.h  ucs_eh_pb.h  ucs_encoder.h  ucs_epm.h  ucs_epm_pv.h  ucs_exc.h  ucs_factory.h  ucs_fsm.h  ucs_gpio.h  ucs_gpio_pb.h  ucs_i2c.h  ucs_i2c_pb.h  ucs_inic.h  ucs_inic_pb.h  ucs_jobs.h  ucs_lld_pb.h  ucs_lldpool.h  ucs_memory.h  ucs_memory_pb.h  ucs_message.h  ucs_message_pb.h  ucs_mgr.h  (+38 more)
libraries/unicens/src/: CMakeLists.txt  ucs_alm.c  ucs_amd.c  ucs_ams.c  ucs_amsmessage.c  ucs_amspool.c  ucs_amtp.c  ucs_attach.c  ucs_base.c  ucs_bc_diag.c  ucs_class.c  ucs_cmd.c  ucs_dec.c  ucs_dl.c  ucs_eh.c  ucs_encoder.c  ucs_epm.c  ucs_exc.c  ucs_factory.c  ucs_fsm.c  ucs_gpio.c  ucs_i2c.c  ucs_inic.c  ucs_inic_res.c  ucs_jobs.c  ucs_lldpool.c  ucs_message.c  ucs_mgr.c  ucs_misc.c  ucs_net.c  ucs_nodedis.c  ucs_nodeobserver.c  ucs_nsm.c  ucs_obs.c  ucs_pmchannel.c  ucs_pmcmd.c  ucs_pmevent.c  ucs_pmfifo.c  ucs_pmfifos.c  ucs_pmp.c  (+14 more)
src/: CMakeLists.txt  CdevHandler.c  CdevHandler.h  Console.h  custom-programming.c  default_config.c  default_config.h  main.c  task-unicens.c  task-unicens.h  ucsi_api.h  ucsi_cfg.h  ucsi_impl.c
tool/: CMakeLists.txt  Console.c  Console.h  Xml2Driver.c  Xml2Struct.c  Xml2Struct.h  main.c
tool/unicens-client/: CMakeLists.txt  Console.c  main.c
tool/xml2struct/: Console.c  Console.h  Xml2Driver.c  Xml2Driver.h  Xml2Struct.c  Xml2Struct.h  main.c
