cmake_minimum_required (VERSION 2.8.11)
project (unicensd)
OPTION(LLD_TRACE "Low Level Trace" OFF)
IF(LLD_TRACE)
    ADD_DEFINITIONS(-DLLD_TRACE)
ENDIF(LLD_TRACE)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -pedantic -DNDEBUG")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
add_subdirectory (libraries)
add_subdirectory (src)
add_subdirectory (tool)
