cmake_minimum_required (VERSION 2.8.11)
project (unicensd)

OPTION(NO_RAW_CLOCK "Do not use raw clock" OFF)
IF(NO_RAW_CLOCK)
    ADD_DEFINITIONS(-DNO_RAW_CLOCK)
ENDIF(NO_RAW_CLOCK)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ADDITIONAL_PLATFORM_FLAGS} -O3 -pedantic -DNDEBUG")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
add_subdirectory (libraries)
add_subdirectory (src)
add_subdirectory (tool)
